Kube/reflector-deployment.yaml
---
# Source: reflector/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reflector
  namespace: default
  labels:
    helm.sh/chart: reflector-7.0.190
    app.kubernetes.io/name: reflector
    app.kubernetes.io/instance: reflector
    app.kubernetes.io/version: "7.0.190"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: reflector
      app.kubernetes.io/instance: reflector
  template:
    metadata:
      labels:
        app.kubernetes.io/name: reflector
        app.kubernetes.io/instance: reflector
    spec:
      serviceAccountName: reflector
      securityContext:
        fsGroup: 2000
      containers:
        - name: reflector
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          image: "emberstack/kubernetes-reflector:7.0.190"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 25080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            {}
      imagePullSecrets:
        - name: dockercred
